# casa

./: .gitignore  .pydevproject  .vcsrc  0version  CMakeLists.txt  DO-NOT-CREATE-NEW-BRANCHES-HERE  GNUmakefile  Makefile.am.common  NEWS  README  SConstruct  VERSION  __init__.py  batchbuild.py  doxy  doxygen.cfg  makefile  runsetup  setup.py
3.0.0/casacore/: .vcsrc  GNUmakefile  configure.ac
aatm/: AUTHORS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  config.h.in  configure  configure.ac
aatm/otest/: Makefile.in
aatm/src/: ATMAngle.cpp  ATMAngle.h  ATMAtmosphereType.cpp  ATMAtmosphereType.h  ATMConstants.h  ATMEnumerations.h  ATMError.cpp  ATMError.h  ATMException.cpp  ATMFrequency.cpp  ATMFrequency.h  ATMHumidity.cpp  ATMHumidity.h  ATMInverseLength.cpp  ATMInverseLength.h  ATMLength.cpp  ATMLength.h  ATMMassDensity.cpp  ATMMassDensity.h  ATMNumberDensity.cpp  ATMNumberDensity.h  ATMOpacity.cpp  ATMOpacity.h  ATMPercent.cpp  ATMPercent.h  ATMPressure.cpp  ATMPressure.h  ATMProfile.cpp  ATMProfile.h  ATMRefractiveIndex.cpp  ATMRefractiveIndex.h  ATMRefractiveIndexProfile.cpp  ATMRefractiveIndexProfile.h  ATMSkyStatus.cpp  ATMSkyStatus.h  ATMSpectralGrid.cpp  ATMSpectralGrid.h  ATMTemperature.cpp  ATMTemperature.h  ATMType.cpp  (+14 more)
aatm/test/: Makefile.am  Makefile.in  SMATest.cpp  absorption.cpp  cmdlineiface.cpp  dispersive.cpp
asap/: CHANGELOG  CMakeLists.txt  COPYING  Doxyfile  INSTALL  Makefile  README  SConstruct  getgitrev.sh  getsvnrev.sh  install_osx.sh  setup.cfg  setup.py
asap/admin/: asapv2_design.sxw  generate_data.sh  log2req.pl  newreq.sh  reqmatrix.sxc  sourcerelease.sh  users.txt
asap/apps/: CMakeLists.txt  Makefile  SConscript  asap2to3.cpp
asap/cmake/: exec_getgitrev.sh  standalone.cmake  withcasa.cmake  withcasa.cmake.new
asap/debian/: README  README.Debian  changelog  control  cron.weekly  python-asap.postinst  rules
asap/doc/: CHANGELOG  Makefile  Plotting_Requirements.txt  SConscript
asap/external-alma/: Makefile  SConscript
asap/packaging/: setup.py
asap/plugins/: vanvleck_flag.py
asap/python/: CMakeLists.txt  __init__.py  __init__.py~  asapfitter.py  asapfitter.py~  asapgrid.py  asaplinefind.py  asaplot.py  asaplotbase.py  asaplotgui.py  asaplotgui_gtk.py  asaplotgui_qt4.py  asapmath.py  asapplotter.py  asapreader.py  casatoolbar.py  coordinate.py  customgui_base.py  customgui_qt4agg.py  customgui_tkagg.py  env.py  flagplotter.py  flagtoolbar.py  interactivemask.py  lagflagger.py  linecatalog.py  logging.py  notationwindow.py  opacity.py  plotter2.py  sbseparator.py  scantable.py  selector.py  simplelinefinder.py  svninfo.txt  utils.py
asap/scons/: casa.py  quietinstall.py  utils.py
asap/share/: CMakeLists.txt
asap/src/: Accelerator.h  AsapLogSink.cpp  AsapLogSink.h  BisectionLocator.cpp  BisectionLocator.h  BisectionLocator.tcc  BufferedBisectionLocator.tcc  BufferedLinearInterpolator1D.h  BufferedLinearInterpolator1D.tcc  CMakeLists.txt  CalibrationHelper.h  CalibrationManager.cpp  CalibrationManager.h  CalibrationManagerWrapper.h  Calibrator.cpp  Calibrator.h  CubicSplineInterpolator1D.h  CubicSplineInterpolator1D.tcc  EdgeDetector.cpp  EdgeDetector.h  EdgeMarker.cpp  EdgeMarker.h  Factory.h  FillerBase.cpp  FillerBase.h  FillerWrapper.h  GILHandler.h  GenericEdgeDetector.cpp  GenericEdgeDetector.h  HuntLocator.h  HuntLocator.tcc  IndexedCompare.h  Interpolator1D.cpp  Interpolator1D.h  Interpolator1D.tcc  LineCatalog.cpp  LineCatalog.h  LinearInterpolator1D.h  LinearInterpolator1D.tcc  Locator.cpp  (+143 more)
asap/test/: file-io.py  mopra.py  parkes-pol.py  simple_linefind.py  test_linecatlog.py  test_nrofiller.py  test_plotter.py  test_scantable.py  test_selector.py
asap/tutorials/: index.rst  tutorial_1.rst  tutorial_2.rst  tutorial_3.rst  tutorial_4.rst  tutorial_5.rst
asap/web/: index.html  intro.html  screenshots.html
casa-3.2.1/wcslib/: GNUmakefile  INSTALL  README  configure  configure.ac  flavours  wcsconfig_f77.h.in  wcsconfig_utils.h.in
casacore/coordinates/: Makefile.am  coordinates.dox
casacore/ms/: CMakeLists.txt  Makefile.am  ms.dox
casacore/scimath/: CMakeLists.txt  Functionals.h  Makefile.am  Mathematics.h  SConstruct  makefile  scimath.dox
casacore/tables/: CMakeLists.txt  LogTables.h  Makefile.am  Tables.h  tables.dox
code/: CMakeLists.txt  VERSION  VERSION.in  VERSION.svn  create.py  makefile
code/air_casawvr/: CMakeLists.txt  config.h  update.sh
code/alma/: CMakeLists.txt  alma.dox
code/alma_v3/: CMakeLists.txt
code/asdmstman/: AsdmColumn.cc  AsdmColumn.h  AsdmIndex.cc  AsdmIndex.h  AsdmStMan.cc  AsdmStMan.h  CMakeLists.txt  Register.cc  Register.h
code/atmosphere/: CMakeLists.txt  atmosphere.dox
code/atnf/: CMakeLists.txt  atnf.dox  makefile
code/bnmin1/: CMakeLists.txt  README  config.h
code/calanalysis/: CMakeLists.txt
code/calibration/: CMakeLists.txt
code/casa_sakura/: CMakeLists.txt  SakuraAlignedArray.cc  SakuraAlignedArray.h  SakuraAlignedArray.tcc  SakuraArrayConverter.cc  SakuraArrayConverter.h  SakuraUtils.cc  SakuraUtils.h
code/casadbus/: CMakeLists.txt
code/casaqt/: CMakeLists.txt  QwtConfig.h
code/components/: CMakeLists.txt  ComponentModels.h  SpectralComponents.h
code/crash/: CMakeLists.txt
code/dish/: CMakeLists.txt  dish.dox
code/display/: CMakeLists.txt  Display.h  DisplayDatas.h  DisplayErrors.h  DisplayEvents.h  DisplayShapes.h
code/display3d/: CMakeLists.txt
code/doc/: casa.html  casa_sitemgr.html  index.html
code/flagging/: CMakeLists.txt
code/graphics/: CMakeLists.txt  Graphics.h
code/guitools/: CMakeLists.txt
code/imageanalysis/: CMakeLists.txt  ImageTypedefs.h
code/include/: atmosphere  demo  dish  display3d  flagging  ionosphere  jive  nfra  nrao  simulators  vlbi
code/install/: BreakpadInstall.cmake  CASA.cmake  FindLIBSAKURA.cmake  FindLOG4CXX.cmake  GoogleTestInstall.cmake  GoogleTestInstall.in  aipsrc  avers  build.py  casa-config.in  casadef.cmake  casainit.csh  casainit.es  casainit.rc  casainit.sh  config.cmake  configure  depend  fixbreakpadframeworkrefs.pl  generate-gitinfo  generate-svninfo  getuinfo.c  makedefs  (+15 more)
(+36965 files in other folders)
